# dontforget

./: AGENTS.md  CHANGELOG.md  Justfile  PRD.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
better_dontforget/: __init__.py  __main__.py  cli.py  cli_helpers.py
better_dontforget/core/: __init__.py  ai.py  app.py  config.py  crypto.py  db.py  models.py  notifications.py  paths.py  providers.py  reminder_parser.py  reminders.py  systemd_install.py
better_dontforget/systemd_units/: better-dontforget-notify.service
better_dontforget/tui/: app.py
docs/: config.md  docs.md
legacy/: main.py  mem-cli
packaging/: better-dontforget-notify.service  better-dontforget-notify.timer
tests/: conftest.py  test_ai.py  test_cli.py  test_config.py  test_crypto.py  test_db.py  test_models.py  test_providers.py  test_reminder_parser.py  test_reminders.py  test_systemd_install.py  test_tui.py
