[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "better-dontforget"
version = "1.0.0"
description = "AI-assisted terminal tool for quick personal memory dumps: better TUI, multiple AI providers, optional reminders with desktop notifications, optional per-note encryption, XDG storage, CLI/TUI config."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "openai>=1.0.0",
    "cryptography>=42.0.0",
    "textual>=8.0.0",
    "rich>=13.0.0",
    "tomli-w>=1.0.0",
]

[project.scripts]
better-dontforget = "better_dontforget.cli:main"
bdf = "better_dontforget.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["legacy"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "better_dontforget.tui.app"
disable_error_code = ["attr-defined"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
